# techuptour-etl

./: .gitignore  README.md  compose.yml  data.json  data.md  description.md  power_analysis.json  project-etl.excalidraw  projects.json  pyproject.toml  techup-tour.env
compose/: Dockerfile  airflow.compose.yml  db.compose.yml  kestra.compose.yml  kestra.yaml  mailpit.compose.yml  minio.compose.yml  proxy.compose.yml  spark.compose.yml
compose/app/flows/: etl_dev_etl_pipeline.yml  hi.yml  main_company.dev_etl_project.yml  main_company.dev_new_demo.yml  main_company.team_gnu_698355.yml  main_company.team_otter_684480.yml  main_demo_connect_spark.yml  main_demo_db_extraction.yml  main_demo_demo_tasks.yml  main_demo_download_bank.yml  main_demo_extract_db.yml  main_demo_first.yml  main_demo_github_projects.yml  main_dev.hi.yml  main_dev_etl.yml  main_etl.project.yml  main_etl_project.yml  main_project_etl_pipeline.yml
compose/app/scripts/: demo.py  extract_cyber_news.py  extract_db.py  extract_github_projects.py  extract_web.py  main.py  main_etl.project.yml  process_db.py  process_file.py  process_web.py  script01.py
compose/basics_flows/: main_demo_connect_spark.yml  main_demo_create_buckets.yml  main_demo_github_projects.yml  main_demo_process_db.yml  main_demo_process_file.yml  main_demo_process_web.yml  main_demo_send_mail.yml
compose/config/: kestra.yaml
compose/dags/: demo_etl.py  etl.py
compose/scripts/: tranform.py
