[project]
name = "techuptour-etl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "apache-airflow-providers-amazon>=9.20.0",
    "apache-airflow[pandas,postgres]>=3.1.6",
    "asyncpg>=0.31.0",
    "httpx>=0.28.1",
    "pydantic>=2.12.5",
]
